fix: prevent overflow x for blog post

--- a/src/templates/blogPost.module.scss
+++ b/src/templates/blogPost.module.scss
@@ -1,5 +1,6 @@
 .blogPost {
   width: 50%;
+  overflow-x: hidden;
   margin: 0 auto;
   font-size: 1.6rem;
   line-height: var(--fontSizesH3);
